@@ -1,6 +1,5 @@
 package com.example.keycloak.ocb.biometric.service;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.example.keycloak.model.AllowedCredential;
 import com.example.keycloak.model.CredentialData;
 import org.keycloak.credential.CredentialModel;
@@ -16,45 +15,19 @@ import java.util.stream.Collectors;
 
 public class WebAuthnCredentialService {
 
-    public static final String CREDENTIAL_TYPE = WebAuthnCredentialModel.TYPE_TWOFACTOR;
+    public static final String CREDENTIAL_TYPE = WebAuthnCredentialModel.TYPE_PASSWORDLESS;
 
-    /**
-     * Lưu credential vào Keycloak credential store
-     */
     public String saveCredential(UserModel user, String credentialId, CredentialData data) {
         try {
-            String aaguid = "00000000-0000-0000-0000-000000000000";
-            long counter = 0;
-            String attestationStatement = "{}";
-            String attestationStatementFormat = "none";
+            WebAuthnCredentialData credentialData = getWebAuthnCredentialData(credentialId, data);
 
-            Set<String> transports;
-            if (data.transports != null) {
-                transports = new HashSet<>(Arrays.asList(data.transports.split(",")));
-            } else {
-                transports = new HashSet<>(Arrays.asList("internal"));
-            }
-
-            WebAuthnCredentialData credentialData = new WebAuthnCredentialData(
-                    aaguid,
-                    credentialId,
-                    counter,
-                    attestationStatement,
-                    data.publicKey, // credentialPublicKey
-                    attestationStatementFormat,
-                    transports
-            );
-
-            // 2. Tạo WebAuthn secret data (empty for public key)
             WebAuthnSecretData secretData = new WebAuthnSecretData();
 
-            // 3. Tạo Keycloak credential model
             CredentialModel credential = new CredentialModel();
             credential.setType(CREDENTIAL_TYPE);
             credential.setUserLabel(data.label != null ? data.label : "Mobile Device");
             credential.setCreatedDate(data.createdAt);
 
-            // Serialize data
             credential.setCredentialData(JsonSerialization.writeValueAsString(credentialData));
             credential.setSecretData(JsonSerialization.writeValueAsString(secretData));
 
@@ -67,49 +40,30 @@ public class WebAuthnCredentialService {
         }
     }
 
-    /**
-     * Lấy tất cả WebAuthn credentials của user
-     */
-    public List<CredentialData> getUserCredentials(UserModel user) {
-        List<CredentialData> credentials = new ArrayList<>();
+    private static WebAuthnCredentialData getWebAuthnCredentialData(String credentialId, CredentialData data) {
+        String aaguid = "00000000-0000-0000-0000-000000000000";
+        long counter = 0;
+        String attestationStatement = "{}";
+        String attestationStatementFormat = "none";
 
-        // Lấy tất cả credentials và filter theo type
-        List<CredentialModel> allCredentials = user.credentialManager().getStoredCredentialsStream().toList();
-        List<CredentialModel> webAuthnCredentials = allCredentials.stream()
-                .filter(cred -> CREDENTIAL_TYPE.equals(cred.getType()))
-                .toList();
-
-        for (CredentialModel credential : webAuthnCredentials) {
-            try {
-                // Parse credential data
-                WebAuthnCredentialData credData = JsonSerialization.readValue(
-                        credential.getCredentialData(), WebAuthnCredentialData.class);
-
-                // Convert sang CredentialData format
-                CredentialData data = new CredentialData();
-                data.publicKey = credData.getCredentialPublicKey();
-                data.label = credential.getUserLabel();
-                data.createdAt = credential.getCreatedDate();
-                data.algorithm = -7; // Default ES256
-
-                if (credData.getTransports() != null) {
-                    data.transports = String.join(",", credData.getTransports());
-                }
-
-                credentials.add(data);
-
-            } catch (Exception e) {
-                // Log và skip invalid credentials
-                System.err.println("Failed to parse WebAuthn credential: " + e.getMessage());
-            }
+        Set<String> transports;
+        if (data.transports != null) {
+            transports = new HashSet<>(Arrays.asList(data.transports.split(",")));
+        } else {
+            transports = new HashSet<>(List.of("internal"));
         }
 
-        return credentials;
+        return new WebAuthnCredentialData(
+                aaguid,
+                credentialId,
+                counter,
+                attestationStatement,
+                data.publicKey,
+                attestationStatementFormat,
+                transports
+        );
     }
 
-    /**
-     * Lấy một credential cụ thể
-     */
     public CredentialData getCredential(UserModel user, String credentialId) {
         List<CredentialModel> allCredentials = user.credentialManager().getStoredCredentialsStream().toList();
         List<CredentialModel> webAuthnCredentials = allCredentials.stream()
@@ -135,40 +89,13 @@ public class WebAuthnCredentialService {
                     return data;
                 }
             } catch (Exception e) {
-                // Skip invalid credential
+                ServicesLogger.LOGGER.error("Failed to parse WebAuthn credential data for credential ID: " + credentialId, e);
             }
         }
 
         return null;
     }
 
-    /**
-     * Xóa credential
-     */
-    public boolean deleteCredential(UserModel user, String credentialId) {
-        List<CredentialModel> allCredentials = user.credentialManager().getStoredCredentialsStream().toList();
-        List<CredentialModel> webAuthnCredentials = allCredentials.stream()
-                .filter(cred -> CREDENTIAL_TYPE.equals(cred.getType()))
-                .toList();
-
-        for (CredentialModel credential : webAuthnCredentials) {
-            try {
-                WebAuthnCredentialData credData = JsonSerialization.readValue(
-                        credential.getCredentialData(), WebAuthnCredentialData.class);
-
-                if (credentialId.equals(credData.getCredentialId())) {
-                    return user.credentialManager().removeStoredCredentialById(credential.getId());
-                }
-            } catch (Exception e) {
-            }
-        }
-
-        return false;
-    }
-
-    /**
-     * Lấy allowed credentials cho authentication
-     */
     public List<AllowedCredential> getAllowedCredentials(UserModel user) {
         List<CredentialModel> allCredentials = user.credentialManager().getStoredCredentialsStream().toList();
         List<CredentialModel> webAuthnCredentials = allCredentials.stream()
@@ -182,41 +109,16 @@ public class WebAuthnCredentialService {
                                 credential.getCredentialData(), WebAuthnCredentialData.class);
 
                         List<String> transports = credData.getTransports() != null ?
-                                new ArrayList<>(credData.getTransports()) : Arrays.asList("internal");
+                                new ArrayList<>(credData.getTransports()) : List.of("internal");
 
                         return new AllowedCredential(credData.getCredentialId(), transports);
 
                     } catch (Exception e) {
                         // Return default nếu parse lỗi
-                        return new AllowedCredential(credential.getId(), Arrays.asList("internal"));
+                        return new AllowedCredential(credential.getId(), List.of("internal"));
                     }
                 })
                 .collect(Collectors.toList());
-    }
-
-    /**
-     * Lấy credential model theo credential ID
-     */
-    public CredentialModel getCredentialModel(UserModel user, String credentialId) {
-        List<CredentialModel> allCredentials = user.credentialManager().getStoredCredentialsStream().toList();
-        List<CredentialModel> webAuthnCredentials = allCredentials.stream()
-                .filter(cred -> CREDENTIAL_TYPE.equals(cred.getType()))
-                .toList();
-
-        for (CredentialModel credential : webAuthnCredentials) {
-            try {
-                WebAuthnCredentialData credData = JsonSerialization.readValue(
-                        credential.getCredentialData(), WebAuthnCredentialData.class);
-
-                if (credentialId.equals(credData.getCredentialId())) {
-                    return credential;
-                }
-            } catch (Exception e) {
-                // Skip invalid credential
-            }
-        }
-
-        return null;
     }
 
     public void updateCredentialCounter(UserModel user, String credentialId, long newCounter) {
@@ -232,7 +134,6 @@ public class WebAuthnCredentialService {
                             credential.getCredentialData(), WebAuthnCredentialData.class);
 
                     if (credentialId.equals(credData.getCredentialId())) {
-                        // Update counter
                         WebAuthnCredentialData updatedCredData = new WebAuthnCredentialData(
                                 credData.getAaguid(),
                                 credData.getCredentialId(),
